--- a/index.html
+++ b/index.html
@@ -251,28 +251,30 @@
                 </a>
               </li>
 
-              <div class="footer-icons">
-                <li>
-                  <a class="footer-icon" href="tel:+380960000007">
-                    <svg class="tel-icon" width="32" height="32">
-                      <use href="./images/icons.svg#icon-tel"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a class="footer-icon" href="#">
-                    <svg class="tel-icon" width="32" height="32">
-                      <use href="./images/icons.svg#icon-fb"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a class="footer-icon" href="#">
-                    <svg class="tel-icon" width="32" height="32">
-                      <use href="./images/icons.svg#icon-insta"></use>
-                    </svg>
-                  </a>
-                </li>
+              <div>
+                <ul class="footer-icons">
+                  <li>
+                    <a class="footer-icon" href="tel:+380960000007">
+                      <svg class="tel-icon" width="32" height="32">
+                        <use href="./images/icons.svg#icon-tel"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="footer-icon" href="#">
+                      <svg class="tel-icon" width="32" height="32">
+                        <use href="./images/icons.svg#icon-fb"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="footer-icon" href="#">
+                      <svg class="tel-icon" width="32" height="32">
+                        <use href="./images/icons.svg#icon-insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </ul>
             <div class="address-info">
